add generated code from open-api plugin